---
source: crates/tapir-script/compiler/src/compile/ir/ssa.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/ir/snapshot_tests/ssa/function.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.6 = int 5
x.7 = foo(temp.6)
return 

=======================
fn foo(x.1) -> int

---- block 0 ----
temp.8 = x.1
temp.9 = int 8
temp.10 = temp.8 + temp.9
return temp.10
